--- a/view/style.css
+++ b/view/style.css
@@ -541,7 +541,7 @@ hr {
 }
 
 .projectBack {
-  background: no-repeat center right fixed linear-gradient(135deg, rgba(149, 13, 195, 0.28) 0%, rgba(149, 13, 195, 0.28) 20%, rgba(134, 50, 200, 0.28) 20%, rgba(134, 50, 200, 0.28) 40%, rgba(119, 87, 204, 0.28) 40%, rgba(119, 87, 204, 0.28) 60%, rgba(104, 123, 209, 0.28) 60%, rgba(104, 123, 209, 0.28) 80%, rgba(89, 160, 213, 0.28) 80%, rgba(89, 160, 213, 0.28) 100%), linear-gradient(45deg, rgba(5, 3, 189, 0.28) 0%, rgba(5, 3, 189, 0.28) 20%, rgba(9, 48, 201, 0.28) 20%, rgba(9, 48, 201, 0.28) 40%, rgba(14, 93, 212, 0.28) 40%, rgba(14, 93, 212, 0.28) 60%, rgba(18, 137, 224, 0.28) 60%, rgba(18, 137, 224, 0.28) 80%, rgba(22, 182, 235, 0.28) 80%, rgba(22, 182, 235, 0.28) 100%), linear-gradient(90deg, #3d738d, #01d971);
+  background: no-repeat center right fixed linear-gradient(135deg, rgba(149, 13, 195, 0.28) 0%, rgba(149, 13, 195, 0.28) 20%, rgba(134, 50, 200, 0.28) 20%, rgba(134, 50, 200, 0.28) 40%, rgba(119, 87, 204, 0.28) 40%, rgba(119, 87, 204, 0.28) 60%, rgba(104, 123, 209, 0.28) 60%, rgba(104, 123, 209, 0.28) 80%, rgba(89, 160, 213, 0.28) 80%, rgba(89, 160, 213, 0.28) 100%), linear-gradient(45deg, rgba(5, 3, 189, 0.28) 0%, rgba(5, 3, 189, 0.28) 20%, rgba(9, 48, 201, 0.28) 20%, rgba(9, 48, 201, 0.28) 40%, rgba(14, 93, 212, 0.28) 40%, rgba(14, 93, 212, 0.28) 60%, rgba(18, 137, 224, 0.28) 60%, rgba(18, 137, 224, 0.28) 80%, rgba(22, 182, 235, 0.28) 80%, rgba(22, 182, 235, 0.28) 100%), linear-gradient(90deg, #00aaff, #01d971);
   background-size: 100%;
   height: 100%;
   background-size: cover;
