--- a/view/style.css
+++ b/view/style.css
@@ -3,6 +3,110 @@
   animation: tracking-in-expand 3s cubic-bezier(0.215, 0.61, 0.355, 1) both;
 }
 
+#name {
+  width: 70vw;
+}
+
+#name path:nth-child(2) {
+  stroke-dasharray: 410;
+  stroke-dashoffset: 410;
+  -webkit-animation: line-anim 3s ease forwards 1s;
+          animation: line-anim 3s ease forwards 1s;
+}
+
+#name path:nth-child(3) {
+  stroke-dasharray: 386.9;
+  stroke-dashoffset: 386.9;
+  -webkit-animation: line-anim 3s ease forwards 1.5s;
+          animation: line-anim 3s ease forwards 1.5s;
+}
+
+#name path:nth-child(4) {
+  stroke-dasharray: 172;
+  stroke-dashoffset: 172;
+  -webkit-animation: line-anim 3s ease forwards 2s;
+          animation: line-anim 3s ease forwards 2s;
+}
+
+#name path:nth-child(5) {
+  stroke-dasharray: 563;
+  stroke-dashoffset: 563;
+  -webkit-animation: line-animM 3s ease forwards 2.5s;
+          animation: line-animM 3s ease forwards 2.5s;
+}
+
+#name path:nth-child(6) {
+  stroke-dasharray: 545.8;
+  stroke-dashoffset: 545.8;
+  -webkit-animation: line-anim 3s ease forwards 3s;
+          animation: line-anim 3s ease forwards 3s;
+}
+
+#name path:nth-child(7) {
+  stroke-dasharray: 422.4;
+  stroke-dashoffset: 422.4;
+  -webkit-animation: line-anim 3s ease forwards 3.5s;
+          animation: line-anim 3s ease forwards 3.5s;
+}
+
+#name path:nth-child(8) {
+  stroke-dasharray: 410;
+  stroke-dashoffset: 410;
+  -webkit-animation: line-anim 3s ease forwards 4s;
+          animation: line-anim 3s ease forwards 4s;
+}
+
+#name path:nth-child(9) {
+  stroke-dasharray: 282;
+  stroke-dashoffset: 282;
+  -webkit-animation: line-anim 3s ease forwards 4.5s;
+          animation: line-anim 3s ease forwards 4.5s;
+}
+
+#name path:nth-child(10) {
+  stroke-dasharray: 172;
+  stroke-dashoffset: 172;
+  -webkit-animation: line-anim 3s ease forwards 5s;
+          animation: line-anim 3s ease forwards 5s;
+}
+
+#name path:nth-child(11) {
+  stroke-dasharray: 410;
+  stroke-dashoffset: 410;
+  -webkit-animation: line-anim 3s ease forwards 3.7s;
+          animation: line-anim 3s ease forwards 3.7s;
+}
+
+@-webkit-keyframes line-anim {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes line-anim {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@-webkit-keyframes line-animM {
+  0% {
+    stroke-dashoffset: calc(563px);
+  }
+  100% {
+    stroke-dashoffset: calc(563px - (563px * 100) / 100);
+  }
+}
+
+@keyframes line-animM {
+  0% {
+    stroke-dashoffset: calc(563px);
+  }
+  100% {
+    stroke-dashoffset: calc(563px - (563px * 100) / 100);
+  }
+}
+
 /**
  * ----------------------------------------
  * animation tracking-in-expand
@@ -2576,6 +2680,9 @@ figure.effect:hover p {
   }
   #c {
     visibility: hidden;
+  }
+  #name {
+    width: 80vw;
   }
 }
 
