--- a/view/style.scss
+++ b/view/style.scss
@@ -16,6 +16,7 @@
 
 #name {
   width: 70vw;
+  animation: fillUp 0.5s ease forwards 6s;
 }
 
 #name path:nth-child(2){
@@ -39,7 +40,7 @@
 #name path:nth-child(5){
   stroke-dasharray: 563;
   stroke-dashoffset: 563;
-  animation: line-animM 3s ease forwards 2.5s;
+  animation: line-anim 3s ease forwards 2.5s;
 }
 
 #name path:nth-child(6){
@@ -61,8 +62,8 @@
 }
 
 #name path:nth-child(9){
-  stroke-dasharray: 282;
-  stroke-dashoffset: 282;
+  stroke-dasharray: 285;
+  stroke-dashoffset: 285;
   animation: line-anim 3s ease forwards 4.5s;
 }
 
@@ -75,7 +76,7 @@
 #name path:nth-child(11){
   stroke-dasharray: 410;
   stroke-dashoffset: 410;
-  animation: line-anim 3s ease forwards 3.7s;
+  animation: line-anim 3s ease forwards 5.5s;
 }
 
 @keyframes line-anim{
@@ -84,12 +85,21 @@
   }
 }
 
-@keyframes line-animM{
-  0% {
-    stroke-dashoffset: calc(563px);
-  }
-  100% {
-    stroke-dashoffset: calc(563px - (563px * 100) / 100);
+// @keyframes line-animM{
+//   0% {
+//     stroke-dashoffset: calc(563px);
+//   }
+//   100% {
+//     stroke-dashoffset: calc(563px - (563px * 100) / 100);
+//   }
+// }
+
+@keyframes fillUp {
+  from {
+    fill: transparent;
+  } 
+  to {
+    fill: #3adbe0;
   }
 }
 
