--- a/view/style.css
+++ b/view/style.css
@@ -5,6 +5,7 @@
 
 #name {
   width: 70vw;
+  stroke-linecap: square;
   -webkit-animation: fillUp 0.5s ease forwards 6s;
           animation: fillUp 0.5s ease forwards 6s;
 }
@@ -73,6 +74,13 @@
 }
 
 #name path:nth-child(11) {
+  stroke-dasharray: 410;
+  stroke-dashoffset: 410;
+  -webkit-animation: line-anim 3s ease forwards 5.5s;
+          animation: line-anim 3s ease forwards 5.5s;
+}
+
+#name path:nth-child(12) {
   stroke-dasharray: 410;
   stroke-dashoffset: 410;
   -webkit-animation: line-anim 3s ease forwards 5.5s;
