new homepage, new backgrounds

--- a/view/style.css
+++ b/view/style.css
@@ -6,8 +6,8 @@
 #name {
   width: 70vw;
   stroke-linecap: square;
-  -webkit-animation: fillUp 0.5s ease forwards 8s;
-          animation: fillUp 0.5s ease forwards 8s;
+  -webkit-animation: fillUp 1s ease forwards 6.5s;
+          animation: fillUp 1s ease forwards 6.5s;
 }
 
 #name path:nth-child(1) {
@@ -102,18 +102,22 @@
 @-webkit-keyframes fillUp {
   from {
     fill: transparent;
+    stroke: #3adae07e;
   }
   to {
     fill: #3adbe0;
+    stroke: #3adae0;
   }
 }
 
 @keyframes fillUp {
   from {
     fill: transparent;
+    stroke: #3adae07e;
   }
   to {
     fill: #3adbe0;
+    stroke: #3adae0;
   }
 }
 
@@ -1578,11 +1582,20 @@ figure.effect:hover p {
   transform: translate3d(0, 0, 0);
 }
 
+.typeFont {
+  font-size: 1.5vw;
+}
+
+.typeFontBlink {
+  font-size: 1vw;
+}
+
 /* typewriter animation
 .animation-typewriter{
 	animation: typewriter 4s steps(40) 1s 1 normal both,
 	blinkTextCursor 500ms steps(40) infinite normal;
 }
+
 
 @keyframes typewriter{
 	from{
@@ -1674,10 +1687,11 @@ figure.effect:hover p {
 	}
   } */
 .textstyle {
-  background-color: #222222;
+  background-color: #22222261;
   /* Changing background color */
   /* opacity: 1.00; 
-	filter:alpha(opacity=1); */
+  filter:alpha(opacity=1); */
+  margin-top: 100px;
   color: white;
   font-weight: bold;
   /* Making font bold */
@@ -2693,6 +2707,30 @@ figure.effect:hover p {
   }
   #name {
     width: 80vw;
+  }
+  .typeFont {
+    font-size: 3vw;
+  }
+  .typeFontBlink {
+    font-size: 2vw;
+  }
+  .textstyle {
+    background-color: #22222200;
+    /* Changing background color */
+    /* opacity: 1.00; 
+    filter:alpha(opacity=1); */
+    margin-top: 50px;
+    color: white;
+    font-weight: bold;
+    /* Making font bold */
+    border-radius: 20px;
+    /* Making border radius */
+    width: 80%;
+    /* Making auto-sizable width */
+    height: auto;
+    /* Making auto-sizable height */
+    padding: 5px 30px 5px 30px;
+    /* Making space around letters */
   }
 }
 
